--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "joi": "^17.13.3",
+    "sxgeo-node": "^0.0.2"
+  }
 }
