--- a/package.json
+++ b/package.json
@@ -2,14 +2,24 @@
   "name": "geo-service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "build": "tsc && copyfiles -u 1 src/data/*.dat dist/",
+    "dev": "ts-node src/server.ts"
   },
   "private": true,
   "dependencies": {
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "joi": "^17.13.3",
     "sxgeo-node": "^0.0.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.7.8",
+    "copyfiles": "^2.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
