--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist"
+    "target": "ESNext", // или любой другой целевой стандарт
+    "module": "CommonJS",
+    "esModuleInterop": true, // Включите эту строку
+    "skipLibCheck": true, // Это может помочь избежать ошибок в типах сторонних библиотек
+    "strict": true, // По желанию, если хотите включить строгую проверку
+    "outDir": "./dist", // Папка для компилированных файлов
+    "rootDir": "./src" // Исходная папка вашего кода
   },
-  "include": ["./src/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
