--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "build": "tsc && copyfiles -u 1 src/data/*.dat dist/",
-    "dev": "ts-node src/server.ts"
+    "start": "cross-env NODE_ENV=production node dist/server.js",
+    "build": "rollup -c",
+    "dev2": "cross-env NODE_ENV=development ts-node src/server.ts",
+    "dev": "cross-env NODE_ENV=development ts-node src/server.ts"
   },
   "private": true,
   "dependencies": {
