--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node dist/server.js",
     "build": "rollup -c",
-    "dev2": "cross-env NODE_ENV=development ts-node src/server.ts",
-    "dev": "cross-env NODE_ENV=development ts-node src/server.ts"
+    "dev": "ts-node --project tsconfig.dev.json src/server.ts"
   },
   "private": true,
   "dependencies": {
@@ -17,9 +16,17 @@
     "sxgeo-node": "^0.0.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.8",
     "copyfiles": "^2.4.1",
+    "cross-env": "^7.0.3",
+    "rollup": "^4.24.0",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
