--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.7",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "ipaddr.js": "^2.2.0",
     "joi": "^17.13.3",
-    "sxgeo-node": "^0.0.2"
+    "sxgeo-node": "^0.0.2",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.1",
